Fix horizontal scrollbar on worksheets popup

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1111,7 +1111,7 @@ body {
     border-bottom-width: 1px;
     background: inherit;
     font-size: 1em;
-    width: 100%;
+    width: 95%;
     text-align: center;
     margin-top: 0.5em;
     opacity: 0.7;
